implement vertical profiles

--- a/src/front/css/App.css
+++ b/src/front/css/App.css
@@ -1,44 +1,48 @@
 .header {
-  background-color: #282c34;
-  height: 5vh;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    height: 4.9vh;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 .map {
-  height: 95vh;
-  width: 100%;
-  padding: 10px;
+    height: 70vh;
+    width: 100%;
+    padding: 4px;
+}
+
+.profile {
+    height: 25vh;
+    width: 100%;
 }
 
 .left-menu {
-  height: 95vh;
-  width: 400px;
-}
-
-.infobox {
-  border: 2px solid grey;
-  margin: 4px;
-  padding: 8px;
+    height: 95vh;
+    width: 400px;
 }
 
 .info .label {
-  font-weight: normal;
+    font-weight: normal;
 }
 
 .info .value {
-  font-weight: bold;
-  text-align: right;
+    font-weight: bold;
+    text-align: right;
 }
 
 .route-list {
-  overflow-y: scroll;
+    overflow-y: scroll;
 }
 
-.route {
-  cursor: pointer;
+.route,
+.launch {
+    cursor: pointer;
+}
+
+.profile {
+    width: 100%;
+    height: 25vh;
 }
