--- a/src/front/css/App.css
+++ b/src/front/css/App.css
@@ -57,6 +57,11 @@ body,
     height: 25vh;
 }
 
+.wind-rose {
+    width: 50px;
+    height: 50px;
+}
+
 .ol-layers-control {
     right: 8px;
     top: 8px;
