--- a/src/front/css/App.css
+++ b/src/front/css/App.css
@@ -75,6 +75,11 @@ body,
     cursor: pointer;
 }
 
+.launch p,
+.route p {
+    margin-bottom: 4px;
+}
+
 .profile {
     width: 100%;
     height: 25vh;
